moved individuell lines to bottom

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# rvr package individual staff
-ROS/catkin_workspace/src/CMakeLists.txt
-ROS/catkin_workspace/src/rvr/lib/.fw
-ROS/catkin_workspace/src/rvr/lib/sphero_sdk
-test/sphero_sdk
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -132,3 +126,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# rvr package
+ROS/catkin_workspace/src/CMakeLists.txt
+ROS/catkin_workspace/src/rvr/lib/.fw
+ROS/catkin_workspace/src/rvr/lib/sphero_sdk
+test/sphero_sdk
+
