--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ dmypy.json
 ROS/catkin_workspace/src/CMakeLists.txt
 ROS/catkin_workspace/src/rvr/lib/.fw
 ROS/catkin_workspace/src/rvr/lib/sphero_sdk
+# Visudal Code Studio settings
+.vscode/settings.json
